--- a/css/style.css
+++ b/css/style.css
@@ -773,7 +773,7 @@ a:focus {
 .service .service-text {
   position: relative;
   width: calc(100% - 120px);
-  padding: 0 30px;
+  padding: 15px 30px;
 }
 
 .service .service-text h3 {
